--- a/src/app/page-list/page-list.component.html
+++ b/src/app/page-list/page-list.component.html
@@ -1,8 +1,9 @@
 <div class='page-list'>
   <h1 class='page-title'>SpaceX Ships</h1>
-  <app-list-item></app-list-item>
-  <app-list-item></app-list-item>
-  <app-list-item></app-list-item>
-  <app-list-item></app-list-item>
+  <app-list-item
+    *ngFor='let ship of ships'
+    [ship]='ship'
+  >
+  </app-list-item>
   <app-pagination></app-pagination>
 </div>
