add port sorting by checkbox

--- a/src/app/page-list/page-list.component.html
+++ b/src/app/page-list/page-list.component.html
@@ -1,7 +1,7 @@
 <div class='page-list'>
   <h1 class='page-title'>SpaceX Ships</h1>
   <app-list-item
-    *ngFor='let ship of ships'
+    *ngFor='let ship of shipsFiltered'
     [ship]='ship'
   >
   </app-list-item>
